Safari bug fix - Center the nav-collapse-expand icon in different way for Safari

--- a/resources/css/components/nav/sidebar.css
+++ b/resources/css/components/nav/sidebar.css
@@ -300,9 +300,11 @@
         }
     }
     .c-nav-collapse-expand {
+        display: flex;
+        justify-content: center;
+        padding-inline-end: var(--spacing-2xs);
         svg {
             fill: none;
-            width: 100%;
         }
         &:not(.js__expand-collapse-nav--collapsed) {
             #top-arrow {
